# AICA-VLM

./: .gitignore  README.md  models  pyproject.toml  requirements.txt
data_processing/: ArtEmis.py  EmoVIT.py  Emotion6.py  FI.py  abstract.py  artemis_dataset.py  artphoto.py  dataset.py  emoset.py  emotic.py  findingemo.py  flickrldl.py  twitterldl.py
examples/adaptation/: InternVL2_5.yaml  InternVL3_14B.yaml  InternVL3_2B.yaml  InternVL3_2B2.yaml  InternVL3_8B.yaml  InternVL3_8B2.yaml  MiniCPM-V.yaml  MiniCPM-o.yaml  MiniCPM.yaml  Ovis2-16B.yaml  Ovis2-2B.yaml  Ovis2-8B.yaml  llava-1.6-13B.yaml  llava-1.6-7B.yaml  llava-onevision.yaml  qwen2.5VL-3B copy.yaml  qwen2.5VL-7B.yaml  qwen2.5VL.yaml  qwen2VL-2B.yaml  qwen2VL-7B.yaml
examples/adaptation/closesource_models/: gpt4o-mini.yaml
examples/adaptation/reasoning/: qwen2.5VL-3B.yaml
examples/adaptation/understanding_cot/: InternVL2_5.yaml  InternVL3_14B.yaml  InternVL3_2B.yaml  InternVL3_8B.yaml  MiniCPM-V.yaml  Ovis2-16B.yaml  Ovis2-2B.yaml  Ovis2-8B.yaml  llava-1.6-7B.yaml  llava-onevision.yaml  qwen2.5VL-3B.yaml  qwen2.5VL-7B.yaml  qwen2VL-2B.yaml  qwen2VL-7B.yaml
examples/config-yaml/dataset-samples/: EU_observer_emotion_AffectNet.yaml  (+7 more)
examples/data_preprocessing/: AffectNet.py  flickrldl.py  twitterldl.py
src/: dataset.py  emotion_model.py
src/aica_vlm/: cli.py  dataset.py  emotion_model.py
src/data_processing/: artemis_dataset.py
src/instructions/: builder.py  template.py
test/: test_adaptation_run.py  test_config_loader.py  test_instruction_builder.py  test_metrics.py
(+36 files in other folders)
